update code for using custom msg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ find_package(cv_bridge REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(OpenCV 4.8 REQUIRED COMPONENTS core highgui imgproc)
-
+find_package(misora2_custom_msg REQUIRED)
 
 include_directories(
   include
@@ -49,6 +49,7 @@ set(dependencies
     OpenCV
     sensor_msgs
     std_msgs
+    misora2_custom_msg
 )
 
 # *.cpp ファイルを明示的に集める
